--- a/css/blog.css
+++ b/css/blog.css
@@ -1,8 +1,36 @@
-/* 폰트적용 */
-@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+/* 폰트 적용 시작 */
+@font-face {
+  font-family: "LotteMartDream";
+  font-style: normal;
+  font-weight: 400;
+  src: url("//cdn.jsdelivr.net/korean-webfonts/1/corps/lottemart/LotteMartDream/LotteMartDreamMedium.woff2")
+      format("woff2"),
+    url("//cdn.jsdelivr.net/korean-webfonts/1/corps/lottemart/LotteMartDream/LotteMartDreamMedium.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "LotteMartDream";
+  font-style: normal;
+  font-weight: 700;
+  src: url("//cdn.jsdelivr.net/korean-webfonts/1/corps/lottemart/LotteMartDream/LotteMartDreamBold.woff2")
+      format("woff2"),
+    url("//cdn.jsdelivr.net/korean-webfonts/1/corps/lottemart/LotteMartDream/LotteMartDreamBold.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "LotteMartDream";
+  font-style: normal;
+  font-weight: 300;
+  src: url("//cdn.jsdelivr.net/korean-webfonts/1/corps/lottemart/LotteMartDream/LotteMartDreamLight.woff2")
+      format("woff2"),
+    url("//cdn.jsdelivr.net/korean-webfonts/1/corps/lottemart/LotteMartDream/LotteMartDreamLight.woff")
+      format("woff");
+}
 
 html {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "LotteMartDream", sans-serif;
 }
 
 body,
@@ -13,203 +41,390 @@ li {
   list-style: none;
 }
 
-html,
-body {
-  overflow-x: hidden;
-  /* 1 */
+:root {
+  --max-width: 1200px;
 }
-.top-image {
-  overflow-x: hidden;
-  /* 2 */
+:root {
+  --mobile-height: 56px;
 }
-
-a {
-  display: block;
-  padding: 10px;
-  color: inherit;
-  text-decoration: none;
-}
-
-.logo-box {
-  text-align: center;
-  padding: 15px;
-}
-
 .con {
-  max-width: 1000px;
-  margin: auto;
+  margin: 0 auto;
+  max-width: var(--max-width);
 }
-
-.navi > ul {
-  display: inline-block;
-}
-
-.navi > ul > li {
-  display: inline-block;
-  padding: 0 25px;
-}
-
-.navi > ul > li > a {
-  font-weight: bold;
-}
-
-.top-image {
-  padding: 0 30px;
-  margin-top: 20px;
-  text-align: center;
-}
-
-.prod-list {
-}
-
-.prod-list > ul::after {
-  content: "";
-  clear: both;
-  display: block;
-}
-
-.prod-list > ul > li {
-  float: left;
-  padding: 0 19.5px;
-  margin-top: 20px;
-  box-sizing: border-box;
-}
-
-.image-box > img {
-  display: block;
-  width: 100%;
-}
-.image-box {
-  position: relative;
-  overflow: hidden;
-  /* 3 */
-}
-
-/* 폰트 적용 끝 */
-body,
-ul,
-li {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
 a {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
 }
-
 .top-bar {
+  /* background-color: rgb(235, 195, 195); */
+  background-color: rgb(235, 227, 217);
   height: 100px;
+  padding: 0 20px;
 }
-.con {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
-}
-.h100p {
-  height: 100%;
+.flex-jc-sb {
+  justify-content: space-between;
 }
 
-.top-bar__menu-box1 {
-  background-color: rgb(180, 147, 152);
+.flex-ai-c {
+  align-items: center;
+}
+.flex-ai-s {
+  align-items: flex-start;
+}
+.flex-d-c {
+  flex-direction: column;
+}
+nav > ul > li > a {
+  padding: 0 30px;
+  align-items: center;
+  color: #2b111a;
 }
 
 .flex {
   display: flex;
 }
 
-.flex-jc {
-  justify-content: center;
+.h100p {
+  height: 100%;
 }
-.flex-ai {
-  align-items: center;
-}
-
-li {
-  flex: 1 0 0;
-  background-color: plum;
-  border: steelblue solid;
-}
-a {
-  /* background-color: tomato; */
-.prod-list > ul > li > .image-box::before {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  z-index: 2;
+.w100p {
+  width: 100%;
 }
 
-.prod-list > ul > li:hover > .image-box::before {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.3);
+.logo {
+  padding: 10px;
+  font-size: 2rem;
+  font-weight: 500;
+
+  /* 글자 그라데이션 test */
+
   cursor: pointer;
+  user-select: none;
 }
 
-.prod-list > ul > li > .image-box::after {
-  content: "VIEW";
-  position: absolute;
-  display: block;
-  font-weight: bold;
-  top: 50%;
-  left: 50%;
-  color: white;
-  border-radius: 20px;
-  border: solid 3px;
-  padding: 8px;
-  transform: translateX(-50%) translateY(-50%);
-  opacity: 0;
-  z-index: 3;
+.logo > span:nth-child(2) {
+  margin-left: 5px;
+  white-space: nowrap;
+  font-weight: 800;
+  color: rgb(240, 220, 191);
+
+  /* 글자 그라데이션 text */
+  background: linear-gradient(to top, #552032, #383436);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.prod-list > ul > li:hover > .image-box::after {
-  opacity: 1;
+.logo > span {
+  /* 글자 그라데이션 text */
+  background: linear-gradient(to top, #d35a55, #c95b58);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.prod-list > ul > li:hover .prod-name {
+ul > li > a > span:nth-child(1) {
+  /* 글자 그라데이션 text */
+  background: linear-gradient(to top, #d35a55, #c95b58);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+ul > li > a > span:nth-child(2) {
+  padding-left: 4px;
+}
+
+ul > li:hover > a {
   text-decoration: underline;
 }
 
-.prod-list > ul > li .prod-price::after {
-  content: "원";
+.flex-100 {
+  flex: 1 0 0;
 }
 
-@media (max-width: 1045px) {
-  .top-image > .top-image-box {
-    padding-left: -40%;
-    /* 이거안먹힘..왜징 */
-  }
-  .navi {
+@media (max-width: 788px) {
+  .visible-md-down {
     display: none;
   }
 }
 
-@media (max-width: 1025px) {
-  .prod-list > ul > li {
-    width: calc(100% / 4);
+@media (min-width: 789px) {
+  .visible-sm-down {
+    display: none;
   }
 }
+/*모바일 작업 */
 
-@media (min-width: 666px) and (max-width: 890px) {
-  .prod-list > ul > li {
-    width: calc(100% / 3);
-  }
+.mobile-padding {
+  padding-top: calc(var(--mobile-height) + 22px);
 }
 
-@media (min-width: 530px) and (max-width: 665px) {
-  .prod-list > ul > li {
-    width: calc(100% / 2);
-  }
+.mobile-top-bar {
+  background-color: rgb(81, 122, 102);
+  padding: 10px 0;
+  width: 100%;
+  height: var(--mobile-height);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+
+  z-index: 1000;
 }
 
-@media (max-width: 529px) {
-  .prod-list > ul > li {
-    width: 100%;
-  }
+.mobile-top-bar > .logo {
+  margin-left: -5px;
+}
+
+.side-menu-bar {
+  padding: 11px 0px;
+}
+
+.toggle-box {
+  position: relative;
+  width: 35px;
+  margin: 0 15px;
+}
+
+.toggle-box > div {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 20%;
+
+  background: linear-gradient(to left, #532133, #585155);
+  border-radius: 10px;
+  transition: top 0.23s, transform 0.23s, opacity 0.23s;
+}
+.toggle-box > div:nth-child(2) {
+  top: 40%;
+}
+.toggle-box > div:nth-child(3) {
+  top: 80%;
+}
+.toggle-box:hover {
+  cursor: pointer;
+}
+
+.toggle-box.active > div:nth-child(1) {
+  top: 40%;
+  transform: rotate(45deg);
+}
+
+.toggle-box.active > div:nth-child(3) {
+  top: 40%;
+  transform: rotate(-45deg);
+}
+
+.toggle-box.active > div:nth-child(2) {
+  opacity: 0;
+}
+
+.mobile-side-bar {
+  position: fixed;
+  background-color: rgb(235, 227, 217);
+  top: 76px;
+  width: 100%;
+  left: -100%;
+  transition: left 1.1s;
+  z-index: 1000;
+}
+.aside-menu-box {
+  align-items: center;
+  margin-top: -30px;
+  position: relative;
+}
+.aside-menu-box > ul {
+  top: 50px;
+  position: absolute;
+  right: 0;
+}
+
+.aside-menu-box a {
+  display: block;
+  padding: 30px;
+  font-size: 1.3rem;
+}
+.mobile-side-bar.active {
+  left: -65%;
+}
+
+/* footer */
+
+.bottom-bar {
+  background-color: rgb(235, 227, 217);
+}
+.bottom-box {
+  padding-bottom: 5px;
+}
+
+.bottom-box div {
+  flex: 1 0 0;
+}
+.bottom-box > .logo-box {
+  padding: 20px 60px;
+  padding-bottom: 12px;
+}
+.bottom-box > .logo-box > .logo {
+  font-size: 1.4rem;
+}
+
+.bottom-content-box {
+  padding: 20px 98px;
+  padding-top: 0px;
+  background: linear-gradient(to top, #381621, #383436);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.body-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.body-content > main {
+  flex-grow: 1;
+}
+
+/* 게시물 리스트 박스 시작 */
+.article-list-box {
+  margin: 0px 50px;
+  margin-top: 10px;
+}
+
+.article-list-box__reg-date {
+  margin-left: 10px;
+}
+.pencil {
+  color: rgb(82, 67, 83);
+  background-color: rgb(208, 208, 223);
+  border-radius: 50%;
+  border-bottom: solid 1.6px rgb(107, 78, 103);
+}
+.reg_wirter {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 35px;
+  margin-bottom: 25px;
+  margin-left: 5px;
+  font-size: 1.3rem;
+}
+
+.article-list-box > ul > li {
+  border: rgba(121, 101, 102, 0.8) solid 3.4px;
+  border-radius: 60px;
+  margin: 40px 0;
+  padding: 35px;
+  background-color: rgba(241, 241, 236, 0.7);
+}
+
+.article-list-box__writer {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.article-list-box__writer > span:last-child {
+  width: 60px;
+  height: 60px;
+  background-color: rgb(108, 143, 143);
+  border-radius: 50%;
+  overflow: hidden;
+  margin-left: 13px;
+}
+
+/* 게시물 리스트 박스 끝 */
+
+/* 토스트 UI 에디터 시작 */
+.toast-ui-youtube-plugin-wrap {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.toast-ui-youtube-plugin-wrap > iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.toast-ui-youtube-plugin-wrap::before {
+  content: "";
+  display: block;
+  padding-top: calc(100% / 16 * 9);
+}
+
+.toast-ui-codepen-plugin-wrap > iframe {
+  width: 100%;
+}
+/* 게시글 제목 앞에 아이콘 */
+
+.highlight {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 66%, #bedbba 50%);
+}
+
+.article-list-box__title {
+  font-size: 2.5rem;
+  margin-top: 15px;
+}
+.article-list-box__title::before {
+  content: "\f06b ";
+  padding-right: 10px;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: rgb(70, 110, 98);
+}
+
+/* 기존의 코드 블록에 걸려있는 여백과 배경색 제거 */
+.toast-ui-viewer .tui-editor-contents pre {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
+/* 토스트 UI 에디터 끝 */
+
+/* 커스텀 끝 */
+
+/* 마지막 게시글 표시, 타이틀바 */
+.latest-articles-box > span:not(:first-child) {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 56%, #e7ebdb 50%);
+  color: #2b111a;
+}
+.latest-articles-box > span:first-child {
+  color: #66552f;
+  padding-right: 6px;
+}
+.latest-articles-box {
+  padding: 40px 67px;
+  padding-bottom: 0px;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+/* 모바일 바텀바 색 수정 */
+.mobile-bottom-bar {
+  background-color: rgb(81, 122, 102);
+}
+.mobile-bottom-bar .mobile.bottom-content-box {
+  /* 글자 그라데이션 text */
+  background: linear-gradient(to top, #e0cbd2, #eec5d3);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* 푸터 수정*/
+
+/* svgs 시작 */
+.svgs {
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+
+.svgs > * {
+  display: block;
 }
